syntax = "proto3";

option csharp_namespace = "SandBoxGrpc";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  int32 test_field = 2;
}

message HelloReply {
  string message = 1;
  int32 test_field = 2;
}
